    from zoom/x/y to zoom/y/x ("flipXYDir")
 + Added possibility to use <localTileFiles> and <localTileZip> within a custom 
    multi-layer map source
 ! CustomMultiLayerMapSource: "null" error when loading
 ! directories.ini: mobac.atlasprofilesdir not used for loading profiles list
 + directories.ini: System variables can be used in the form ${VARNAME}

1.9 beta 4 (2011-05-02)
 ~ Problem loading tile image type for custom map sources (ends up for TrekBuddy 
    atlas format in an NullPointerException like in bug #3290976
 ~ Settings dialog now lists all tile stores - not only the stores of loaded map 
    sources
 + Experimental: Polygonal map derived from GPX track segment
 ! Endless opening of exception dialog (endless recursion)

1.9 beta 3 (2011-04-21)
 + Map source UMP-pcPL reactivated
 + [Nokia] Sports Tracker file extension changed to jpg (feature request #3066161)
 + Reactivated atlas format "TwoNav (RMAP)"
 + New map source: FAA Sectional Charts (aeromaps.us)
 + Reactivated map sources Freemap.sk (Car atlas, Hiking map, Cycle map)
 + Map source New Zealand Topographic Maps (nztopomaps.com) reactivated
 ! OruxMapsSQLite: Last processed tiles missing in db file

1.9 beta 2 (2011-04-06)
 ! Custom atlas map source / locally generated tiles map source
 + New map source for using tiles from zip file(s)
 + Removed all map sources except the OSM related - for details see 
    http://sourceforge.net/projects/mobac/forums/forum/861096/topic/4470412

1.9 beta 1 (2011-03-29)
 + New map source: OpenStreetMap MapQuest
 + New map source: OpenStreetMap Bing layer (Mapnik powered by Microsoft)
 ~ Maximum zoom level of OpenStreetMap Mapnik decreased to 16 (zoom levels 
    17+ are blocked on server side because of high server stress for 
    generating such tiles) 
 + New custom map source type: reading tiles offline from an OSMTracker/AndNav/
    BackCountry Navigator/Maverick/OSMAND atlas (from file system)